fix z-index

--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -572,6 +572,10 @@ video {
   z-index: 10;
 }
 
+.z-20 {
+  z-index: 20;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
